<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/nav_home_selector"
        android:title="Home" />
    
    <item
        android:id="@+id/prescriptionsFragment"
        android:icon="@drawable/nav_prescriptions_selector"
        android:title="Prescriptions" />
    
    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/nav_discover_selector"
        android:title="Discover" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/nav_profile_selector"
        android:title="Profile" />
    
</menu>